fix wrap style for buttons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -665,6 +665,7 @@ form.line-form.five-fields button {
     font-size: inherit;
     font-size: 20px;
     border-radius: 5px;
+    white-space: normal;
 }
 
 .btn-primary {
